# pam-fprint-grosshack

./: .gitignore  .gitlab-ci.yml  AUTHORS  BUILDING_GUIDE_ARCH.md  Makefile.am  NEWS  README  README.transifex  autogen.sh  config.h.meson  configure.ac  meson.build  meson_options.txt  update-transifex.sh
data/: Makefile.am  fprintd.1  fprintd.pod  fprintd.service.in  meson.build  net.reactivated.Fprint.conf  net.reactivated.fprint.device.policy.in  pam_fprintd.pod
doc/dbus/: meson.build
pam/: Makefile.am  README  fingerprint-strings.h  meson.build  pam_fprintd.c  pam_fprintd.ver  pam_fprintd_autoptrs.h
po/: ar.po  as.po  ast.po  az.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fprintd.pot  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  (+31 more)
src/: Makefile.am  device.c  device.xml  file_storage.c  file_storage.h  fprintd.h  main.c  manager.c  meson.build  storage.h
tests/: Makefile.am  fprintd.py  meson.build  test_fprintd_utils.py
tests/dbusmock/: fprintd.py  polkitd.py
tests/pam/: Makefile.am  meson.build  test_pam_fprintd.py
tests/pam/services/: Makefile.am  fprintd-pam-test.in
utils/: delete.c  enroll.c  list.c  meson.build  verify.c
